[package]
name = "steel-flint"
version.workspace = true
edition.workspace = true
description = "Flint testing framework integration for SteelMC"

[dependencies]
# Internal crates
steel-core = { workspace = true }
steel-protocol = { workspace = true }
steel-registry = { workspace = true }
steel-utils = { workspace = true }

# UUID
uuid = { workspace = true }

# Text components for disconnect messages
text_components = { workspace = true }

# Flint testing framework
flint-steel = { path = "../../../flint/flint-steel/flint-steel" }
flint-core = { path = "../../../flint/flint-core" }

# Async
tokio = { workspace = true }

# Logging
log = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }

# Hash maps
rustc-hash = { workspace = true }

# Serialization (for flint-core compatibility)
serde_json = { workspace = true }
dotenvy = "0.15.7"

[lints]
workspace = true
